--- a/examples/blueprint.css
+++ b/examples/blueprint.css
@@ -109,8 +109,24 @@ svg {
 #workspace {
     display: block;
     width: 100%;
-    height: 100%;
     box-sizing: border-box;
+}
+
+#control-panel input, 
+#control-panel button, 
+#control-panel select {
+    height: 28px;
+    -webkit-appearance: none;
+    padding: 3px 9px;
+    margin: 0px;
+    box-sizing: border-box;
+    border-radius: 4px;
+}
+
+#control-panel button, #control-panel select {
+    border: 2px outset #CCC;
+    font-size: inherit;
+    background-color: inherit;
 }
 
 #display {
@@ -143,6 +159,7 @@ svg {
     display: block;
     width: 100%;
     height: 1em;
+    cursor: move;
 }
 #display.display {
     max-height: 100% !IMPORTANT;
